Changed the styling for AvatarList so that it displays correctly on mobile screens

--- a/src/components/avatars/AvatarList.module.css
+++ b/src/components/avatars/AvatarList.module.css
@@ -1,6 +1,6 @@
 .gridLayout {
 	display: grid;
-	grid-template-columns: repeat(2, minmax(175px, 2fr));
+	grid-template-columns: repeat(2, minmax(8rem, 2fr));
 	margin: auto;
 	gap: 1rem;
 }
